@@ -5,9 +5,9 @@
 extern int get_next_node_csid(void **context, char *csid);
 extern void add_down_node(char *csid);
 extern int gulm_fd(void);
-extern int get_ip_address(char *node, char *addr);
-extern void tcp_remove_client(char *csid);
-extern int alloc_client(int fd, char *csid, struct local_client **new_client);
+extern int get_ip_address(const char *node, char *addr);
+extern void tcp_remove_client(const char *csid);
+extern int alloc_client(int fd, const char *csid, struct local_client **new_client);
 
-void gulm_add_up_node(char *csid);
-int gulm_name_from_csid(char *csid, char *name);
+void gulm_add_up_node(const char *csid);
+int gulm_name_from_csid(const char *csid, char *name);
